[package]
name = "black_ops_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
colored = "2.0"
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["set-header", "compression-full"] }
chrono = "0.4" # Để tạo Time header chuẩn HTTP
