[package]
name = "rust_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
url = "2.4"
colored = "2.0" # Để in màu cho đẹp
